--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -62,7 +62,7 @@
                     <img class="img-location" src="https://salt.tikicdn.com/ts/upload/88/5c/9d/f5ee506836792eb7775e527ef8350a44.png
                     " alt="">
                     <span class="text-location"> Giao đến: </span>
-                    <div class="address"><b>Q. 1.P. Bến Nghé, Hồ Chí Minh</b></div>
+                    <div class="address"><a class="link-address" href="http://"><b>Q. 1.P. Bến Nghé, Hồ Chí Minh</b></a></div>
                 </div>
             </div>
         </div>
