bổ sung thanh cam kết

--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -69,8 +69,35 @@
         <!---->
     </div>
     <hr>
+    <!--pham cam ket-->
+    <div class="commit">
+        <div class="list-commit">
+            <span><b>Cam kết</b></span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_hang_that.png" alt="hang_that.png">
+            <span>100% hàng thật</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_hoan_hang.png" alt="_hoan_hang.png">
+            <span>Hoàn 200% nếu hàng giả</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_doi_tra.png" alt="doi_tra.png">
+            <span>30 ngày đổi trả</span>
+        </div>
+        <div class="list-commit">
+            <img  class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_gia_sieu_re.png" alt="gia_sieu_re.png">
+            <span>Giá siêu rẻ</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_freeship.png" alt="freeship.png">
+            <span>Freeship mọi đơn</span>
+        </div>
+    </div>
+    <hr class="hr">
     <!--Footer-->
-    <footer >
+    <footer class="style-footer">
         <!--do tro khach hang-->
         <div class="block">
             <div class="heading-footer"> 
@@ -177,6 +204,5 @@
             </div>
         </div>
     </footer>
-
 </body>
 </html>
