--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -43,7 +43,8 @@
                 </div>
                 <div class="shortcut-shoppingcart">
                     <img class="icon-card" src="https://salt.tikicdn.com/ts/upload/51/e2/92/8ca7e2cc5ede8c09e34d1beb50267f4f.png" alt="">
-                    <span class="number"></span>
+                    <span class="number">0</span>
+                    <a class="cart-shopping-user" href="/Home/HTML/giohang.html"></a>
                 </div>
             </div>
         </div>
