complete 'dien gia dung'

--- a/Tiki.vn/Home/HTML/dien_gia_dung.html
+++ b/Tiki.vn/Home/HTML/dien_gia_dung.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/dien_gia_dung.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <title>Document</title>
 </head>
 <style>
@@ -66,7 +67,36 @@
                         <button class="style-button">Panasonic</button>
                         <button class="style-button">Sunhouse</button>
                         <button class="style-button">Bear</button>
-                        <select class="more-option"></select>
+                        <select class="more-option">
+                            <div class="style-option">
+                                <option >KAFF</option>
+                                <option >Bluestone</option>
+                                <option >Kangaroo</option>
+                                <option >Karofi</option>
+                                <option >Xiaomi</option>
+                                <option >Sharp</option>
+                                <option >Electronux</option>
+                                <option >Eurosun</option>
+                                <option >Tefal</option>
+                                <option >Tiross</option>
+                                <option >SENKO</option>
+                                <option >Robot</option>
+                                <option >Toshiba</option>
+                                <option >Bosch</option>
+                                <option >ERA</option>
+                                <option >Rinnai</option>
+                                <option >Kemei</option>
+                                <option >BLAUBERG</option>
+                                <option >Elmich</option>
+                                <option >DeLonghi</option>
+                                <option >Makita</option>
+                                <option >Nagakawa</option>
+                                <option >Braun</option>
+                                <option >SMY</option>
+                                <option >GDV</option>
+                                <option >Ladomax</option>
+                            </div>
+                        </select>
                     </div>
                 </div>
                 <div class="right-choose">
@@ -77,13 +107,47 @@
                     <div class="button-right-choose">
                         <button class="style-button">Đen</button>
                         <button class="style-button">Bạc</button>
+                        <button class="style-button">Trắng</button>
                     </div>
-
                 </div>
                 <div class="all">
-    
+                    <button class="style-button-all"><i class="fa-solid fa-filter"></i></i>Tất cả</button>
                 </div>
             </div>
+        </div>
+        <div class="filter">
+            <span class="left-filter">
+                <input class="checkbox" type="checkbox" id="now" class="style-checkbox">
+                <label  for="now"><img class="now" src="/Tiki.vn/Home/IMG/img-dien-gia-dung/now.png" alt=""><span class="ship-2H">Giao siêu tốc 2H</span></label>
+            </span>
+            <span class="mid-filter">
+                <input class="checkbox" type="checkbox" id="top" class="style-checkbox">
+                <label  for="top"><img class="top" src="/Tiki.vn/Home/IMG/img-dien-gia-dung/top-deal.png" alt=""><span class="ship-2H">Siêu rẻ</span></label>
+            </span>
+            <span class="right-filter">
+                <input class="checkbox" type="checkbox" id="free" class="style-checkbox">
+                <label  for="free"><img class="free" src="/Tiki.vn/Home/IMG/img-dien-gia-dung/free-ship.png" alt=""></label>
+            </span>
+            <span class="end-filter">
+                <input class="checkbox" type="checkbox" id="star" class="style-checkbox">
+                <label  for="star">
+                    <i class="fa-solid fa-star icon"></i>
+                    <i class="fa-solid fa-star icon"></i>
+                    <i class="fa-solid fa-star icon"></i>
+                    <i class="fa-solid fa-star icon"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <span>Từ 4 sao</span>
+                </label>
+            </span>
+            <span class="arrange"><span class="text-arrange">Sắp xếp</span> 
+                <select class="popular">
+                    <option >Phổ biến</option>
+                    <option >Bán chạy</option>
+                    <option >Hàng mới</option>
+                    <option >Giá thấp đến cao</option>
+                    <option >Giá cao đến thấp</option>
+                </select>
+            </span>
         </div>
     </div>
 </body>
