chinh sua header va footer

--- a/Tiki.vn/Home/HTML/footer.html
+++ b/Tiki.vn/Home/HTML/footer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiki - Mua hàng online giá tốt, hàng chuẩn, ship nhanh</title>
     <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/Favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/Home/CSS/footer.css">
+    <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
 </head>
 
 <body>
