complete footer section

--- a/Tiki.vn/Home/HTML/footer.html
+++ b/Tiki.vn/Home/HTML/footer.html
@@ -20,7 +20,7 @@
                         Thành phố Hồ Chí Minh cấp lần đầu vào ngày 06/01/2010.
                     </p>
                     <span>Hotline: </span><a class="list-link" href="tel:+1900-6035">1900-6035</a>
-                </div>
+                </div>++
             </div>
         </div>
 
