--- a/Tiki.vn/Home/HTML/giohang.html
+++ b/Tiki.vn/Home/HTML/giohang.html
@@ -9,15 +9,17 @@
 
 </head>
 
-<body> 
-    <h2>Giỏ hàng</h2>
-    <div class="shortcut-shoppingcart">
-        <div class="fix-cart">
-            <div class="cart-container">
-                <img src="/IMG/anhgiohang.png" alt="Cart Icon" class="cart-icon">
-                <h3>Giỏ hàng trống</h3>
-                <p>Bạn tham khảo thêm các sản phẩm được Tiki gợi ý bên dưới nhé!</p>
-            </div>
+<body>
+    <div class="box-shopping-cart">
+        <div class="content-shopping-cart">
+            <h1>GIỎ HÀNG</h1>
+            <div class="fix-cart">
+                <div class="cart-container">
+                    <img class="cart-icon" src="/Home/IMG/img-header-footer/anhgiohang.png" >
+                    <h3>Giỏ hàng trống</h3>
+                    <p>Bạn tham khảo thêm các sản phẩm được Tiki gợi ý bên dưới nhé!</p>
+                </div>
+            </div>  
         </div>
     </div>
 </body>
