--- a/Tiki.vn/Home/HTML/giohang.html
+++ b/Tiki.vn/Home/HTML/giohang.html
@@ -5,12 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giỏ Hàng Tiki</title>
+    <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/giohang.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
 
 </head>
 
 <body>
+    <div class="freeship">
+        <div class="text">
+            <b>Freeship đơn từ 45k, giảm nhiều hơn cùng <i><b id="FS">FREESHIP</b> <b id="xtra">XTRA</b></i></b>
+        </div>
+    </div>
+    <!--Thanh menu-->
+    <header>
+        <div class="container-menu">
+            <!--logo menu-->
+            <div class="home-logo">
+                <div>
+                    <img id="logo" src="/Tiki.vn/Home/IMG/img-header-footer/Logo_Tiki_2023.png" alt="Home">
+                    <div><span id="text"><b >Tốt & Nhanh</b></span></div>
+                </div>
+            </div>
+            <div class="container-search">
+                <div class="middle-container">
+                    <div class="search">
+                        <img class="icon-search" src="https://salt.tikicdn.com/ts/upload/33/d0/37/6fef2e788f00a16dc7d5a1dfc5d0e97a.png
+                        " alt="icon-search">
+                        <input class="input-search" type="text">
+                        <input class="button-search" type="button" > <a class="link-search" href=""> Tìm kiếm</a>
+                    </div>
+                    <div class="menu-shortcut">
+                        <div class="shortcut-home">
+                            <img class="icon-home" src="https://salt.tikicdn.com/ts/upload/b4/90/74/6baaecfa664314469ab50758e5ee46ca.png
+                            " alt="shortcut-home">
+                            <a class="link-shortcut-home" href="trangchu.com">Trang chủ</a>
+                        </div>
+                        <div class="shortcut-user">
+                            <img class="icon-user" src="https://salt.tikicdn.com/ts/upload/07/d5/94/d7b6a3bd7d57d37ef6e437aa0de4821b.png" alt="shortcut-user">
+                            <a class="link-shortcut-user" href="taikhoan.com">Tài khoản</a>
+                        </div>
+                        <div class="shortcut-shoppingcart">
+                            <img class="icon-card" src="https://salt.tikicdn.com/ts/upload/51/e2/92/8ca7e2cc5ede8c09e34d1beb50267f4f.png" alt="">
+                            <span class="number"><span class="num"></span></span>
+                        </div>
+                    </div>
+                    <div class="shortcut-shoppingcart">
+                </div> 
+                <!--bottom menu-->
+                <div class="bottom-container">
+                    <div class="list-recommend">
+                        <a class="link-recommend" href="https://tiki.vn/dien-gia-dung/c1882?from=header_keyword"> điện gia dùng</a>
+                        <a class="link-recommend" href="https://tiki.vn/o-to-xe-may-xe-dap/c8594?from=header_keyword">xe cộ</a>
+                        <a class="link-recommend" href="https://tiki.vn/do-choi-me-be/c2549?from=header_keyword">mẹ & bé</a>
+                        <a class="link-recommend" href="https://tiki.vn/lam-dep-suc-khoe/c1520?from=header_keyword">khỏe đẹp</a>
+                        <a class="link-recommend" href="https://tiki.vn/nha-cua-doi-song/c1883?from=header_keyword">nhà cửa</a>
+                        <a class="link-recommend" href="https://tiki.vn/nha-sach-tiki/c8322?from=header_keyword">sách</a>
+                        <a class="link-recommend" href="https://tiki.vn/the-thao-da-ngoai/c1975?from=header_keyword">thể thao</a>
+                    </div>
+                    <div class="location">
+                        <img class="img-location" src="https://salt.tikicdn.com/ts/upload/88/5c/9d/f5ee506836792eb7775e527ef8350a44.png
+                        " alt="">
+                        <span class="text-location"> Giao đến: </span>
+                        <div class="address"><a class="link-address" href="http://">Q. 1.P. Bến Nghé, Hồ Chí Minh</a></div>
+                    </div>
+                </div>
+            </div>
+    </header>
+    <hr>
+    <div class="commit"> <!--thanh cam ket-->
+        <div class="list-commit">
+            <span><b>Cam kết</b></span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_hang_that.png" alt="hang_that.png">
+            <span>100% hàng thật</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_hoan_hang.png" alt="_hoan_hang.png">
+            <span>Hoàn 200% nếu hàng giả</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_doi_tra.png" alt="doi_tra.png">
+            <span>30 ngày đổi trả</span>
+        </div>
+        <div class="list-commit">
+            <img  class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_gia_sieu_re.png" alt="gia_sieu_re.png">
+            <span>Giá siêu rẻ</span>
+        </div>
+        <div class="list-commit">
+            <img class="img-commit" src="/Tiki.vn/Home/IMG/img-commit/commit_freeship.png" alt="freeship.png">
+            <span>Freeship mọi đơn</span>
+        </div>
+    </div>
+    <hr>
+
+
     <div class="box-shopping-cart1">
         <div class="grid">
             <div class="box-shopping-cart">
@@ -25,22 +115,29 @@
                     </div>
                 </div>
 
-                <script>
-                    function updateContent(content) {
-                        document.getElementById("content-selling").innerHTML = content;
-                    }
-                </script>
-
-
                 <div class="best-selling-product">
                     <div class="best-selling-container">
                         <h2>Sản phẩm bán chạy</h2>
                         <div class="button-box-selling">
-                            <button class="myButton" onclick="updateContent(content1)">Bình giữ nhiệt</button>
-                            <button onclick="updateContent(content2)">Quạt Đứng</button>
-                            <button onclick="updateContent(content3)">Móc treo</button>
-                            <button onclick="updateContent(content4)">Balo thời trang</button>
+                            <button class="Button_cart" onclick="updateContent(content1)">Bình giữ nhiệt</button>
+                            <button class="Button_cart" onclick="updateContent(content2)">Quạt Đứng</button>
+                            <button class="Button_cart" onclick="updateContent(content3)">Móc treo</button>
+                            <button class="Button_cart" onclick="updateContent(content4)">Balo thời trang</button>
                         </div>
+
+                        <script>
+                            function setActive(button) {
+                                var buttons = document.querySelectorAll('.Button_cart');
+                                buttons.forEach(btn => btn.classList.remove('active'));
+                                button.classList.add('active');
+                                updateContent(button.textContent);
+                            }
+                    
+                            function updateContent(content) {
+                                document.getElementById("content-selling").innerHTML = content;
+                            }
+                        </script>
+
                         <div id="content-selling" class="content-box-selling">
                             <div class="list-box-selling">
                                 <div class="box-selling">
