Completed adding registration and login pages

--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -301,7 +301,7 @@
                         <img class="img-slide" src="/Tiki.vn/Home/IMG/img-main/tikinow.webp" alt="tikinow.webp">
                         
                     </div>
-                    <!--<div class="list-slide">
+                    <div class="list-slide">
                         <img src="/Tiki.vn/Home/IMG/img-main/Cung_me_cham_be.webp" alt="Cung_me_cham_be.webp">
                         <img src="/Tiki.vn/Home/IMG/img-main/mot_sach_tiki.webp" alt="mot_sach_tiki.webp">
                     </div>
