--- a/Tiki.vn/Home/HTML/giohang.html
+++ b/Tiki.vn/Home/HTML/giohang.html
@@ -204,8 +204,7 @@
                                         </div>
                                         <div class="div-info-selling">
                                             <div class="info-item-selling">
-                                                <span class="description-item-selling">Bình giữ nhiệt Lock&Lock Belt
-                                                    Bottle
+                                                <span class="description-item-selling">Bình giữ nhiệt Lock&Lock Belt Bottle
                                                     LHC4267 490ml</span>
                                                 <div class="icon-star-feedback-selling">
                                                     <img class="icon-star-rate-selling"
