--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -312,18 +312,17 @@
                             <img class="img-slide" src="/Tiki.vn/Home/IMG/img-main/sieu_hoi_lam_dep.webp" alt="sieu_hoi_lam_dep.webp">
                         </div>
                     </div>
+                    <div class="buttons-slide">
+                        <button id="prev"><b><</b></button>
+                        <button id="next"><b>></b></button>
+                    </div>
+                    <ul class="dots">
+                        <li id="dots-slide-first"></li>
+                        <li id="dots-slide-second"></li>
+                        <li id="dots-slide-third"></li>
+                    </ul>
                 </div>
-                <div class="buttons-slide">
-                    <button id="prev"><</button>
-                    <button id="next">></button>
-                </div>
-                <ul class="dots">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                
                 <!--
                 <span class="side">
                     <div class="list-slide">
@@ -1265,7 +1264,6 @@
                                  <div class="img-of-box">
                                      <img  class="some-img-of-box" src="/Tiki.vn/Home/IMG/img-top-deal-main/binh-giu-nhiet-look-n-look.webp" alt="binh-giu-nhiet-look-n-look.webp">
                                      <img class="some-img-of-box"  src="/Tiki.vn/Home/IMG/img-top-deal-main/top-deal-chinh-hang.png" alt="top-deal-chinh-hang.png">
-                                     
                                  </div>
                                  <div class="div-info">
                                      <div class="info-item">
