--- a/Tiki.vn/Home/HTML/giohang.html
+++ b/Tiki.vn/Home/HTML/giohang.html
@@ -153,8 +153,7 @@
                                         </div>
                                         <div class="div-info-selling">
                                             <div class="info-item-selling">
-                                                <span class="description-item-selling">Bình giữ nhiệt inox 304
-                                                    Sunhouse 450ml
+                                                <span class="description-item-selling">Bình giữ nhiệt inox 304 Sunhouse 450ml
                                                     KS-TU450I</span>
                                                 <div class="icon-star-feedback-selling">
                                                     <img class="icon-star-rate-selling"
