--- a/Tiki.vn/Home/HTML/giohang.html
+++ b/Tiki.vn/Home/HTML/giohang.html
@@ -184,7 +184,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -234,7 +234,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -289,7 +289,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -338,7 +338,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -390,7 +390,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -438,7 +438,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -490,7 +490,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -538,7 +538,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -590,7 +590,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -638,7 +638,7 @@
                                     <hr>
                                     <div class="logo-now-selling">
                                         <img class="img-logo-now-selling"
-                                            src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                            src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                         <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                     </div>
                                 </div>
@@ -699,7 +699,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -749,7 +749,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -799,7 +799,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -848,7 +848,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -897,7 +897,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
@@ -946,7 +946,7 @@
                                             <hr>
                                             <div class="logo-now-selling">
                                                 <img class="img-logo-now-selling"
-                                                    src="/Tiki.vn/Home/IMG/img-top-deal-main/now.png" alt="now.png">
+                                                    src="/Tiki.vn/Home/IMG/img-form-box/now.png" alt="now.png">
                                                 <span class="text-logo-now-selling">Giao siêu tốc 2h</span>
                                             </div>
                                         </div>
